# OpenCOLE

./: .envrc.example  .gitignore  LICENSE  README.md  fuga.sh  pyproject.toml
docs/: dataset_preparation.md  inference.md  training.md
src/layoutlib/: bucketizer.py  manager.py  schema.py  util.py
src/layoutlib/config/element/: text_layout.yaml  text_layout_no_quantization.yaml  type_layout.yaml  typography_crello_default.yaml  typography_private_default.yaml
src/layoutlib/hfds/: __init__.py  base.py  clustering.py  crello.py  mock.py  util.py
src/layoutlib/weights/: crello_max20_kmeans_train_clusters.pkl
src/opencole/: schema.py  util.py
src/opencole/evaluation/: clip.py  eval_detail_similarity.py  eval_gpt4v.py  eval_image_layer.py  result_visualization.py  sentence.py
src/opencole/hf_support/: convert_llava_to_hf.py  dump_full_llava_weight_dicts.py  push_to_hub.py
src/opencole/inference/: langchain_helper.py  tester.py  util.py
src/opencole/inference/data/: cole_designerintention_v1_samples.csv  cole_designerintention_v2_samples.csv
src/opencole/inference/tester/: base.py  llm.py  text2image.py
src/opencole/inference/typographylmm_config/: crello_default.json
src/opencole/inference_launcher/: gpt4_augmented_baselines.py  k_shot_llm.py  render.py  text_to_image.py  typographylmm.py
src/opencole/model/: llava.py
src/opencole/preprocess/: create_dataset_for_text_to_image.py  create_dataset_for_typographylmm.py  helper.py  language.py
src/opencole/preprocess/dataset_creation/: __init__.py  crello_instances.py  design.py  image_to_detail.py  image_to_intention.py  loading.py  progress_util.py  test_components.py  util.py  vision_llm_llava.py
src/opencole/renderer/: color_utils.py  fonts.py  image_utils.py  renderer.py  schema.py  text_utils.py  utils.py
