[project]
name = "opencole"
version = "0.1.0"
description = ""
packages = [
  { include = "layoutlib", from = "src", format = "sdist" },
  { include = "opencole", from = "src", format = "sdist" },
]

requires-python = ">=3.10.0, <3.11.0"
dependencies = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "numpy<2.0.0",
    "langchain>=0.3.20",
    "bitsandbytes>=0.45.3",
    "protobuf>=6.30.0",
    "peft>=0.14.0",
    "sentencepiece>=0.2.0",
    "compel>=2.0.3",
    "skia-python>=87.6",
    "datasets>=2.14.4",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "scikit-image>=0.25.2",
    "setuptools>=70.2.0",
    "sentence-transformers>=3.4.1",
    "huggingface-hub>=0.29.3",
    "openai>=1.65.5",
    "langchain-openai>=0.3.8",
    "chromadb>=0.6.3",
    "faiss-cpu>=1.10.0",
    "seaborn>=0.13.2",
    "pydantic>=2.10.6",
    "pinjected>=0.2.242",
    "beautifulsoup4>=4.13.3",
    "ftfy>=6.3.1",
    "langchain-community>=0.3.19",
    "transformers>=4.49.0",
    "diffusers",
]

# see https://docs.astral.sh/uv/concepts/projects/config/#build-systems why it's necessary
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["layoutlib", "opencole"]

[tool.uv]
extra-index-url = [
    "https://download.pytorch.org/whl/cu124",
]

[tool.uv.pip]
emit-index-url = true

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.10.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "tensorboard>=2.18.0",
]
